fix filter form z-index

--- a/becpg-plm/becpg-plm-share/src/main/web/components/entity-charact-views/formulation-view.css
+++ b/becpg-plm/becpg-plm-share/src/main/web/components/entity-charact-views/formulation-view.css
@@ -23,6 +23,7 @@
 
 .formulation-view  .dashlet {
 	margin: 10px 0 0;
+	z-index: auto;
 }
 
 .formulation-view  .dashlet  .toolbar {
